--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -84,9 +84,9 @@ $runtimes = $this->getParam('runtimes', []);
 <div class="notice">
     <h3>Handling Dependencies</h3>
 
-        <p>With Appwrite Version 0.12 and later dependencies can now be handled by the build stage when your tag is activated however certain steps must be made to ensure that dependencies can be correctly detected and installed.</p>
+    <p>Dependencies are now handled by the build stage when your tag is activated however certain steps must be made to ensure that dependencies can be correctly detected and installed.</p>
 
-        <p>These steps differ from language to language and are outlined below:</p>
+    <p>These steps differ from language to language and are outlined below:</p>
 
     <p><b>Python</b></p>
 
@@ -120,43 +120,66 @@ $runtimes = $this->getParam('runtimes', []);
 </div>
 
 <h3>Exporting your code functions</h3>
-<p>With the new execution model introduced in 0.12 functions are now no longer executed directly from the interpreter but are instead imported into the runtime. This means that your code will need to be formatted specificially for the runtime you are using.</p>
+<p>With the new execution model, functions are now no longer executed directly from the interpreter but are instead imported into the runtime. This means that your code will need to be formatted specificially for the runtime you are using.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
         <h3>Node.js</h3>
         <div class="ide margin-top-small" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>npm install node-appwrite --save</code></pre>
+            <pre class="line-numbers"><code class="prism language-js" data-prism>
+                module.exports = async (req, res) => {
+                    res.send('Hello World!');
+                }
+            </code></pre>
         </div>
     </li>
     <li>
         <h3>PHP</h3>
         <div class="ide margin-top-small" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>composer require 'appwrite/appwrite'</code></pre>
+            <pre class="line-numbers"><code class="prism language-php" data-prism>
+            return function($request, $response) {
+                $response->send('Hello World!');
+            };
+            </code></pre>
         </div>
     </li>
     <li>
         <h3>Python</h3>
         <div class="ide margin-top-small" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>pip install appwrite</code></pre>
+            <pre class="line-numbers"><code class="prism language-python" data-prism>
+            def main(req, res):
+                return res.send('Hello World!')
+            </code></pre>
         </div>
     </li>
     <li>
         <h3>Ruby</h3>
         <div class="ide margin-top-small" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>gem install appwrite</code></pre>
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>
+            def main(request, response)
+                return response.send("Hello World!")
+            end
+            </code></pre>
         </div>
     </li>
     <li>
         <h3>Deno</h3>
         <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Deno SDK">
-            <pre class="line-numbers"><code class="prism language-typescript" data-prism>import * as sdk from "https://deno.land/x/appwrite/mod.ts";</code></pre>
+            <pre class="line-numbers"><code class="prism language-typescript" data-prism>
+            export default function(req: any, res: any) {
+                res.send("Hello World!")
+            }
+        </code></pre>
         </div>
     </li>
     <li>
         <h3>Dart</h3>
         <div class="ide margin-top-small" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>dart pub add dart_appwrite</code></pre>
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>
+            Future<void> start(Request request, Response response) async {
+                response.send("Hello World!");
+            }
+            </code></pre>
         </div>
     </li>
     <h3>Rust</h3>
@@ -164,9 +187,11 @@ $runtimes = $this->getParam('runtimes', []);
             <p>Add the Appwrite Swift SDK package as a dependency</p>
             <div class="ide margin-top-small" data-lang="swift" data-lang-label="Swift">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>dependencies: [
-    // ...
-    .package(url: "https://github.com/appwrite/sdk-for-swift.git", from: "0.0.1")
-    // ...
+                use super::{Response, RequestValue};
+
+                pub fn main(req: RequestValue) -> Response {
+                    return Response::send("test".to_string());
+                }
 ]</code></pre>
             </div>
             <p>Add the dependency product to your target</p>
