--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -460,7 +460,7 @@ func main(req: RequestValue, res: RequestResponse) throws -> RequestResponse {
 
 <p>If a build fails for any reason, the deployment's status is set to <b>failed</b> and you won't be able to activate it. You can however retry a build if you think it was caused by an external factor using the <b>Retry Button</b> on the Appwrite Dashboard or <a href="/docs/server/functions#functionsRetryBuild">Retry Build</a> endpoint with the <b>buildId</b> from the deployment.</p>
 
-<p>To find more details about a deployment and reasons for its failure, you can use the <a href="/docs/server/functions#functionsGetDeployment" target="_blank">Get Deployment</a> endpoint using the <b>deploymentId</b>.</p>
+<p>To find more details about a deployment and reasons for its failure, you can use the <a href="/docs/server/functions#functionsGetDeployment">Get Deployment</a> endpoint using the <b>deploymentId</b>.</p>
 
 <p>Deployments that have been built successfully are marked as <b>ready</b> and can be activated and executed.</p>
 
