make Git dependency less obvious

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -4,6 +4,8 @@
 
 <p>The CLI is packaged both as an <a href="https://www.npmjs.com/package/appwrite-cli">npm module</a> as well as a <a href="https://github.com/appwrite/sdk-for-node-cli/releases/latest">standalone binary</a> for your operating system, making it completely dependency free, platform independent and language agnostic.</p>
 
+<p>If you plan to use the CLI to initialize new Cloud Functions, ensure that <a href="https://git-scm.com/book/en/v2/Getting-Started-Installing-Git" target="_blank" rel="noopener">Git is installed</a> on your machine.</p>
+
 <h3><a href="/docs/command-line#installWithNpm" id="installWithNpm">Install with NPM</a></h3>
 
 <p>If you have npm set up, run the command below to install the CLI</p>
@@ -89,11 +91,6 @@ brew install --HEAD appwrite</code></pre>
 <h3><a href="/docs/command-line#deployFunctions" id="deployFunctions">Deploying Cloud Functions</a></h3>
 
 <p>The CLI also handles the creation and deployment of Appwrite's Cloud Functions. You can initialize a new function using</p>
-
-<div class="notice margin-bottom"> 
-    <h3>Prerequisites</h3> 
-    <p>Creating a new function using the Appwrite CLI requires <a href="https://git-scm.com/book/en/v2/Getting-Started-Installing-Git" target="_blank" rel="noopener">Git to be installed</a> on your machine.</p>
-</div>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite init function
