fix external linkes in docs

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -749,9 +749,9 @@ class MainActivity : AppCompatActivity() {
 
 <h2><a href="/docs/functions#appwriteSDKInFunctions" id="appwriteSDKInFunctions">Appwrite SDKs in Functions</a></h2>
 
-<p>You can integrate Appwrite Functions with other Appwrite services by using the appropriate [Server SDK](https://appwrite.io/docs/getting-started-for-server) for your runtime. You can find starter code for your function's runtime in the [Appwrite Function Starter repository](https://github.com/appwrite/functions-starter).</p>
+<p>You can integrate Appwrite Functions with other Appwrite services by using the appropriate <a href="https://appwrite.io/docs/getting-started-for-server" target="_blank">Server SDK</a> for your runtime. You can find starter code for your function's runtime in the <a href="https://github.com/appwrite/functions-starter" target="_blank">Appwrite Function Starter repository</a>.</p>
 
-<p>To initialize a Server SDK in a function, you need to provide your Appwrite project's endpoint and an [API key](https://appwrite.io/docs/keys) as <b>Variables</b> in the <b>Settings</b> tab of your Function. The ID of your Appwrite project is passed in automatically as <span class="tag">APPWRITE_FUNCTION_PROJECT_ID</span>.</p>
+<p>To initialize a Server SDK in a function, you need to provide your Appwrite project's endpoint and an <a href="https://appwrite.io/docs/keys" target="_blank">API key</a> as <b>Variables</b> in the <b>Settings</b> tab of your Function. The ID of your Appwrite project is passed in automatically as <span class="tag">APPWRITE_FUNCTION_PROJECT_ID</span>.</p>
 
 <h2><a href="/docs/functions#monitorDebug" id="monitorDebug">Monitor & Debug</a></h2>
 
