--- a/app/views/docs/webhooks.phtml
+++ b/app/views/docs/webhooks.phtml
@@ -74,17 +74,14 @@ $events = $this->getParam('events', []);
     </tr>
     </thead>
     <tbody>
-    <?php foreach($events as $event => $data):
-        $description = $data['description'] ?? '';
-        $model = $data['model'] ?? '';
-        $note = $data['note'] ?? '';
+    <?php foreach($events as $event):
+        $pattern = $event['pattern'] ?? '';
+        $description = $event['description'] ?? '';
+        $model = $event['model'] ?? '';
     ?>
     <tr>
         <td>
             <?php echo $this->escape($event); ?>
-            <?php if(!empty($note)): ?>
-                <p class="margin-top-small text-fade"><?php echo $this->escape($note); ?></p>
-            <?php endif; ?>
         </td>
         <td>
         <?php if(!empty($model)): ?>
