add correct section headers to reduce confusion

--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -24,7 +24,7 @@
 
 <p>This is the parent directory where you will find the <b>appwrite</b> directory, inside which there are <b>docker-compose.yml</b> and <b>.env</b> files.</p>
 
-<h3><a href="/docs/upgrade#upgrade-command" id="unix">Run The Migration</a></h3>
+<h3><a href="/docs/upgrade#install-newest-version" id="install-new-version">Installing the Next Version</a></h3>
 
 <ul class="phases clear" data-ui-phases>
     
@@ -69,6 +69,8 @@
 </div>
 
 <p>Verify that the <b>STATUS</b> doesn't have any errors and all the <b>appwrite/appwrite</b> containers have version : <?php echo APP_VERSION_STABLE; ?></p>
+
+<h3><a href="/docs/upgrade#run-the-migration" id="migration">Running the Migration</a></h3>
 
 <p>We can now start the migration. Navigate to the <b>appwrite</b> directory where your <b>docker-compose.yml</b> is present and run the following command</p>
 
