--- a/app/views/docs/rest.phtml
+++ b/app/views/docs/rest.phtml
@@ -58,10 +58,8 @@
 <p>The example below shows creating an account session with the <a href="/docs/client/account#accountCreateEmailSession">Create Account Session with Email</a> endpoint.</p>
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
     <pre class="line-numbers"><code class="prism language-http" data-prism>POST /v1/account/sessions/email HTTP/1.1
-Host: [HOSTNAME_OR_IP]
 Content-Type: application/json
 X-Appwrite-Project: 5df5acd0d48c2
-X-Appwrite-Response-Format: 1.0.0
 
 {
   "email": "example@email.com",
@@ -78,11 +76,9 @@ Set-Cookie: a_session_61e71ec784ab035f7259=eyJ0...aSJ9; expires=Tue, 19-Dec-2023
 <p>These cookies are used in subsequent requests to authenticate the user.</p>
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
     <pre class="line-numbers"><code class="prism language-http" data-prism>GET /v1/account HTTP/1.1
-Host: demo.appwrite.io
 Cookie: a_session_61e71ec784ab035f7259_legacy=eyJ0...aSJ9; a_session_61e71ec784ab035f7259=eyJ0...aSJ9
 Content-Type: application/json
-X-Appwrite-Project: 5df5acd0d48c2
-X-Appwrite-Response-Format: 1.0.0</code></pre>
+X-Appwrite-Project: 5df5acd0d48c2</code></pre>
 </div>
 
 <h2><a href="/docs/rest#server-auth" id="server-auth">Server Authentication</a></h2>
@@ -91,11 +87,9 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
 
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
     <pre class="line-numbers"><code class="prism language-http" data-prism>GET /v1/databases/{databaseId}/collections/{collectionId}/documents HTTP/1.1
-Host: [HOSTNAME_OR_IP]
 Content-Type: application/json
 X-Appwrite-Project: [PROJECT_ID]
-X-Appwrite-Key: [API_KEY]
-X-Appwrite-Response-Format: 1.0.0</code></pre>
+X-Appwrite-Key: [API_KEY]</code></pre>
 </div>
 
 <h2><a href="/docs/rest#server-auth" id="server-auth">JWT Authentication</a></h2>
@@ -103,11 +97,9 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
 
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
     <pre class="line-numbers"><code class="prism language-http" data-prism>GET /v1/account HTTP/1.1
-Host: [HOSTNAME_OR_IP]
 Content-Type: application/json
 X-Appwrite-Project: [PROJECT_ID]
-X-Appwrite-JWT: [TOKEN]
-X-Appwrite-Response-Format: 1.0.0</code></pre>
+X-Appwrite-JWT: [TOKEN]</code></pre>
 </div>
 
 <h2><a href="/docs/rest#file-handling" id="file-handling">File Handling</a></h2>
@@ -195,7 +187,6 @@ X-Appwrite-Response-Format: 1.0.0</code></pre>
 
 <div class="ide margin-bottom" data-lang="http" data-lang-label="HTTP">
     <pre class="line-numbers"><code class="prism language-http" data-prism>POST /v1/storage/buckets/default/files HTTP/1.1
-Host: [HOSTNAME_OR_IP]
 Content-Type: multipart/form-data; boundary=----WebKitFormBoundarye0m6iNBQNHlzTpVM
 X-Appwrite-Project: demo-project
 Content-Range: bytes 10485760-12582912/12582912
